Edit to button id name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
         <div id="searchContainer">
             <input class="searchControl" type="text" placeholder="City Name or Zipcode" id="searchInput">
-            <button class="searchControl" id="searchButton">Search</button>
+            <button class="searchControl" id="searchBtn">Search</button>
         </div>
         <div id="weatherContainer">
             <div id="weatherDescription">
